# nokogiri-rust

./: .gitattributes  CODE_OF_CONDUCT.md  Cargo.toml  Gemfile  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  Rakefile  nokogiri_rust.gemspec  segfault.rb
benchmarks/: big_shopping.html  nokogiri_benchmark.rb
lib/: nokogiri_rust.rb
lib/nokogiri_rust/: version.rb
spec/: nokogiri_rust_spec.rb  spec_helper.rb
src/: lib.rs
