[package]
name = "nokogiri_rust"
version = "0.2.0"
authors = ["Ilya Zub <zaoooza92@gmail.com>"]
edition = "2021"

[lib]
name = "nokogiri_rust_ruby_lib"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
rutie = "0.8.3"
scraper = "0.12.0"

[profile.release]
debug = true
opt-level = 0
rpath = true
debug-assertions = true
